--- a/first/first.ioc
+++ b/first/first.ioc
@@ -17,7 +17,8 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PA0-WKUP
-Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin10=PB6
+Mcu.Pin11=VP_SYS_VS_Systick
 Mcu.Pin2=PA3
 Mcu.Pin3=PA5
 Mcu.Pin4=PA6
@@ -26,7 +27,7 @@ Mcu.Pin6=PA9
 Mcu.Pin7=PA10
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=11
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -72,6 +73,12 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PB6.GPIO_Label=PB6_LED1
+PB6.GPIO_PuPd=GPIO_PULLUP
+PB6.Locked=true
+PB6.PinState=GPIO_PIN_SET
+PB6.Signal=GPIO_Output
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
@@ -105,7 +112,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
