--- a/first/first.ioc
+++ b/first/first.ioc
@@ -17,17 +17,18 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PA0-WKUP
-Mcu.Pin10=PB6
-Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin10=PA14
+Mcu.Pin11=PB6
+Mcu.Pin12=VP_SYS_VS_Systick
 Mcu.Pin2=PA3
 Mcu.Pin3=PA5
 Mcu.Pin4=PA6
 Mcu.Pin5=PA7
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=12
+Mcu.Pin6=PB0
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA13
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -73,6 +74,11 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB0.GPIO_Label=PB0_TEMP-SET-UP
+PB0.GPIO_PuPd=GPIO_PULLUP
+PB0.Locked=true
+PB0.Signal=GPIO_Input
 PB6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB6.GPIO_Label=PB6_LED1
 PB6.GPIO_PuPd=GPIO_PULLUP
