Feat: FND_CONTROLLER

--- a/first/first.ioc
+++ b/first/first.ioc
@@ -15,20 +15,22 @@ Mcu.IP4=USART1
 Mcu.IPNb=5
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PA0-WKUP
-Mcu.Pin10=PA14
-Mcu.Pin11=PB6
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin2=PA3
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=PB0
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA13
-Mcu.PinsNb=13
+Mcu.Pin0=PA0-WKUP
+Mcu.Pin1=PA3
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB6
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin2=PA5
+Mcu.Pin3=PA6
+Mcu.Pin4=PA7
+Mcu.Pin5=PB0
+Mcu.Pin6=PB13
+Mcu.Pin7=PB14
+Mcu.Pin8=PB15
+Mcu.Pin9=PA9
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -79,14 +81,33 @@ PB0.GPIO_Label=PB0_TEMP-SET-UP
 PB0.GPIO_PuPd=GPIO_PULLUP
 PB0.Locked=true
 PB0.Signal=GPIO_Input
+PB13.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PB13.GPIO_Label=FND_RCLK
+PB13.GPIO_PuPd=GPIO_PULLUP
+PB13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB13.Locked=true
+PB13.PinState=GPIO_PIN_SET
+PB13.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PB14.GPIO_Label=FND_DIO
+PB14.GPIO_PuPd=GPIO_PULLUP
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB14.Locked=true
+PB14.PinState=GPIO_PIN_SET
+PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PB15.GPIO_Label=FND_SCLK
+PB15.GPIO_PuPd=GPIO_PULLUP
+PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB15.Locked=true
+PB15.PinState=GPIO_PIN_SET
+PB15.Signal=GPIO_Output
 PB6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB6.GPIO_Label=PB6_LED1
 PB6.GPIO_PuPd=GPIO_PULLUP
 PB6.Locked=true
 PB6.PinState=GPIO_PIN_SET
 PB6.Signal=GPIO_Output
-PC13-TAMPER-RTC.Locked=true
-PC13-TAMPER-RTC.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
