--- a/first/first.ioc
+++ b/first/first.ioc
@@ -10,9 +10,10 @@ Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SPI1
-Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP3=SPI2
+Mcu.IP4=SYS
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA0-WKUP
@@ -81,27 +82,20 @@ PB0.GPIO_Label=PB0_TEMP-SET-UP
 PB0.GPIO_PuPd=GPIO_PULLUP
 PB0.Locked=true
 PB0.Signal=GPIO_Input
-PB13.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=FND_SCLK
-PB13.GPIO_PuPd=GPIO_PULLUP
-PB13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB13.Locked=true
-PB13.PinState=GPIO_PIN_SET
-PB13.Signal=GPIO_Output
-PB14.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PB13.Mode=TX_Only_Simplex_Unidirect_Master
+PB13.Signal=SPI2_SCK
+PB14.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB14.GPIO_Label=FND_RCLK
-PB14.GPIO_PuPd=GPIO_PULLUP
-PB14.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB14.GPIO_PuPd=GPIO_NOPULL
 PB14.Locked=true
-PB14.PinState=GPIO_PIN_SET
+PB14.PinState=GPIO_PIN_RESET
 PB14.Signal=GPIO_Output
-PB15.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=FND_DIO
-PB15.GPIO_PuPd=GPIO_PULLUP
-PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB15.Locked=true
-PB15.PinState=GPIO_PIN_SET
-PB15.Signal=GPIO_Output
+PB15.Mode=TX_Only_Simplex_Unidirect_Master
+PB15.Signal=SPI2_MOSI
 PB6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB6.GPIO_Label=PB6_LED1
 PB6.GPIO_PuPd=GPIO_PULLUP
@@ -152,6 +146,13 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI2.CLKPolarity=SPI_POLARITY_HIGH
+SPI2.CalculateBaudRate=500.0 KBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
