--- a/first/first.ioc
+++ b/first/first.ioc
@@ -12,8 +12,9 @@ Mcu.IP1=RCC
 Mcu.IP2=SPI1
 Mcu.IP3=SPI2
 Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP5=TIM2
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA0-WKUP
@@ -23,6 +24,7 @@ Mcu.Pin11=PA13
 Mcu.Pin12=PA14
 Mcu.Pin13=PB6
 Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA5
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
@@ -31,7 +33,7 @@ Mcu.Pin6=PB13
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PA9
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -47,6 +49,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0-WKUP.GPIO_Label=GPIO_SW
@@ -59,8 +62,9 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
-PA3.GPIO_Label=GPIO_TEST
+PA3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA3.GPIO_Label=PA3_TEMP_DATA
+PA3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA3.Locked=true
@@ -107,7 +111,7 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -133,7 +137,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
@@ -153,9 +157,14 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM2.IPParameters=AutoReloadPreload,Prescaler
+TIM2.Prescaler=(10000-1)
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
 isbadioc=false
