--- a/first/first.ioc
+++ b/first/first.ioc
@@ -67,7 +67,7 @@ PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA3.GPIO_Label=PA3_TEMP_DATA
-PA3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA3.Locked=true
@@ -145,7 +145,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
