Fix: temper -> FND clear

--- a/first/first.ioc
+++ b/first/first.ioc
@@ -176,7 +176,7 @@ SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM2.IPParameters=AutoReloadPreload,Prescaler,Period
-TIM2.Period=0xFFFF
+TIM2.Period=1999
 TIM2.Prescaler=(72-1)
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
