Feat: Relay on off

--- a/first/first.ioc
+++ b/first/first.ioc
@@ -25,10 +25,11 @@ Mcu.Pin13=PA9
 Mcu.Pin14=PA10
 Mcu.Pin15=PA13
 Mcu.Pin16=PA14
-Mcu.Pin17=PB6
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin17=PB5
+Mcu.Pin18=PB6
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PD0-OSC_IN
+Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PD1-OSC_OUT
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA3
@@ -36,7 +37,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB0
-Mcu.PinsNb=20
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -100,6 +101,12 @@ PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=FND_DIO
 PB15.Mode=TX_Only_Simplex_Unidirect_Master
 PB15.Signal=SPI2_MOSI
+PB5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PB5.GPIO_Label=PB5_RELAY_ON_OFF_CTRL
+PB5.GPIO_PuPd=GPIO_PULLDOWN
+PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB6.GPIO_Label=PB6_LED1
 PB6.GPIO_PuPd=GPIO_PULLUP
@@ -129,7 +136,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
